--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "link_shortener_frontend",
   "version": "0.1.0",
+  "homepage": "https://gnohgnij.github.io/link_shortener/",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.4",
@@ -18,7 +19,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -37,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
